# VQGE

./: B.xlsx  README.md  Readme.md  The structure of matrix A in ocean acoustic.xlsx  pyvqges-1.0.0-py3-none-any.whl
SourceDate_txt/: SectionVA.txt  SectionVB.txt  SectionVC _noise.txt  SectionVC_matrixA.npy  SectionVC_matrixB.npy  SectionVC_noiseless.txt
package/: pyproject.toml  setup.cfg  vqgespytest.py
package/SectionVA test/: test.py
package/SectionVB test/: A_proj.mat  AnsatzsCircuit.txt  B_proj.mat  VOriginIR.txt  WOriginIR.txt  loss.txt  test.py
package/SectionVC test/: draw.py  test.py
package/vqgespy/: utils.py
package/vqgespy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
