[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vqgespy"
version = "0.1.0"
description = "Python frontend for VQGES with pybind11 core"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Your Name", email="your@email.com" }
]
dependencies = [
    "pyvqges",  
    "numpy",
    "scipy"
]

