[metadata]
name = vqgespy
version = 0.1.0
author = ZiTong Zhou
description = A Python + pybind11-based library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pyvqges

[options.package_data]
vqgespy = *.py